--- a/src/app/components/fhirdata/fhirdata.component.html
+++ b/src/app/components/fhirdata/fhirdata.component.html
@@ -14,26 +14,67 @@
   ~ // limitations under the License.
   -->
 
-<div id="fhirDataHeader">
+<div id="fhirDataHeader" class="row-padding">
   <h2 class="header-style">FHIR Data</h2>
-  <button type="button" class="btn btn-primary header-button"  data-toggle="tooltip" data-placement="left" title="Fetch data from the server again" (click)="fetchPatientDataInSession()"><i class="fa fa-refresh" aria-hidden="true"></i></button>
 </div>
 
+<div class="row justify-content-center row-padding">
+  <div class="col-3">
+    Try a query: <input type="text" [(ngModel)]="customQuery">
+  </div>
+  <!-- <div class="col-3">
+    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+      <div class="btn-group" role="group">
+        <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+          Dropdown
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+          <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+          <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+        </ul>
+      </div>
+    </div>
+  </div> -->
+  <div class="col-2">
+    <button type="button" class="btn btn-primary header-button" (click)="fetchPatientDataInSession('query')">Search with
+      a custom query</button>
+  </div>
+  <div class="col-2">
+    <button type="button" class="btn btn-primary header-button" (click)="fetchPatientDataInSession('everything')">Search
+      with $everything</button>
+  </div>
+</div>
+<ng-container *ngIf="!showLoadingBar">
+  <ng-container *ngIf="bundleFound">
+    <h3 style="padding-top: 25px; padding-bottom: 25px;">Searching with: {{ searchTypeHeader }}</h3>
+  </ng-container>
+</ng-container>
 
 <div class="card border-dark margin-adjust">
   <ng-container *ngIf="showLoadingBar">
     <div class="progress">
-      <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-styling" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-styling" role="progressbar"
+        aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </ng-container>
   <ng-container *ngIf="!showLoadingBar">
-    <ng-container *ngIf="bundleFound">
+    <ng-container *ngIf="!bundleFound">
+      <div class="col text-center">
+        <span>
+          Select what search type you'd like to test
+        </span>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="bundleFound && !errorObject.flag">
       <div id="fhirResult">
         <pre><code>{{ bundleFound | json  }}</code></pre>
       </div>
     </ng-container>
-    <ng-container *ngIf="!bundleFound">
+    <ng-container *ngIf="errorObject.flag">
       <app-error [errorObject]="errorObject"> </app-error>
     </ng-container>
   </ng-container>
+
+
+
 </div>
