--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,10 +102,12 @@ code {
   height: 50em;
 }
 
-.header-style {
-  margin: 0;
-  display: inline-block;
-}
+// TODO: use the styling from https://codepen.io/Createdbymatt/pen/MMggQX to implement global dark mode 
+
+// .header-style {
+//   margin: 0;
+//   display: inline-block;
+// }
 
 .header-button {
   float: right;
