--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
   ~ // limitations under the License.
   -->
 
+  <!-- <button (click)="toggleDarkTheme()">Toggle dark theme</button> -->
+
 <nav class="nav">
   <a class="nav-link" [ngClass]="{'active': navLinks[0].active }"
     (click)="toggleClass(navLinks[0])">{{navLinks[0]['name']}}</a>
@@ -21,6 +23,7 @@
     (click)="toggleClass(navLinks[1])">{{navLinks[1]['name']}}</a>
   <a class="nav-link" [ngClass]="{'active': navLinks[2].active, 'hide-nav-element': !returnTokenStatus() }"
     (click)="toggleClass(navLinks[2])">{{navLinks[2]['name']}}</a>
+  <a class="nav-link" (click)="toggleDarkTheme()">Toggle dark theme</a>
 </nav>
 
 <div class="container">
