--- a/src/app/components/fhirdata/fhirdata.component.html
+++ b/src/app/components/fhirdata/fhirdata.component.html
@@ -45,7 +45,7 @@
   <div class="col-3">
     Try a query: <input type="text" [(ngModel)]="customQuery">
   </div>
-  <!-- <div class="col-3">
+  <div class="col-3">
     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
       <div class="btn-group" role="group">
         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,7 +57,7 @@
         </ul>
       </div>
     </div>
-  </div> -->
+  </div>
   <div class="col-2">
     <button type="button" class="btn btn-primary header-button" (click)="fetchPatientDataInSession('query')">Search with
       a custom query</button>
