--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,6 @@
   ~ // limitations under the License.
   -->
 
-  <!-- <button (click)="toggleLightTheme()">Toggle dark theme</button> -->
-
 <nav class="nav">
   <a class="nav-link" [ngClass]="{'active': navLinks[0].active }"
     (click)="toggleClass(navLinks[0])">{{navLinks[0]['name']}}</a>
@@ -23,8 +21,16 @@
     (click)="toggleClass(navLinks[1])">{{navLinks[1]['name']}}</a>
   <a class="nav-link" [ngClass]="{'active': navLinks[2].active, 'hide-nav-element': !returnTokenStatus() }"
     (click)="toggleClass(navLinks[2])">{{navLinks[2]['name']}}</a>
-  <a class="nav-link" (click)="toggleLightTheme()">Toggle theme</a>
+  <a class="nav-link" (click)="toggleLightTheme()">
+    <ng-container *ngIf="currentTheme === 'dark'">
+      <i class="lni lni-night"></i>
+    </ng-container>
+    <ng-container *ngIf="currentTheme === 'light'">
+      <i class="lni lni-sun"></i>
+    </ng-container> 
+  </a>
 </nav>
+
 
 <div class="container">
   <div class="title">
