removed unneeded boxes for release, updated styling for light/ dark them, fixed issue where selected theme would not persist on refresh

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
     <div *ngIf="returnCurrentViewSelection() === 'home'">
       <h2>Your Tokens</h2>
       <div class="card border-dark">
-        <span class="row-padding">
+        <span id="expiryHeader">
           Expires on: {{tokenObjectForDisplay['expirationDate']}}
         </span>
         <div class="accordion accordion-flush" id="accordionSection">
