updated logic for header handling, code cleanup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
     </ng-container>
     <ng-container *ngIf="currentTheme === 'light'">
       <i class="lni lni-sun"></i>
-    </ng-container> 
+    </ng-container>
   </a>
 </nav>
 
@@ -63,7 +63,8 @@
                     {{ tokenObjectForDisplay['accessToken'] }}
                   </code>
                 </div>
-                <button type="button" class="btn btn-primary" (click)="copyToClipboard(tokenObjectForDisplay['accessToken'])">Copy</button>
+                <button type="button" class="btn btn-primary"
+                  (click)="copyToClipboard(tokenObjectForDisplay['accessToken'])">Copy</button>
               </div>
             </div>
           </div>
@@ -100,7 +101,8 @@
                     {{tokenObjectForDisplay['idToken'] }}
                   </code>
                 </div>
-                <button type="button" class="btn btn-primary" (click)="copyToClipboard(tokenObjectForDisplay['idToken'])">Copy</button>
+                <button type="button" class="btn btn-primary"
+                  (click)="copyToClipboard(tokenObjectForDisplay['idToken'])">Copy</button>
               </div>
             </div>
           </div>
@@ -122,7 +124,8 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item" *ngIf="tokenObjectForDisplay['refreshToken'] && tokenObjectForDisplay['refreshToken'].length > 0">
+          <div class="accordion-item"
+            *ngIf="tokenObjectForDisplay['refreshToken'] && tokenObjectForDisplay['refreshToken'].length > 0">
             <h2 class="accordion-header" id="flush-headingFive">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
@@ -140,7 +143,7 @@
           </div>
         </div>
       </div>
-      
+
     </div>
 
     <!-- SECOND TAB -->
