--- a/src/app/components/fhirdata/fhirdata.component.css
+++ b/src/app/components/fhirdata/fhirdata.component.css
@@ -13,3 +13,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+
+ .btn-adjust {
+    margin-top: 24px;
+ }
+
+ .top-adjust {
+    padding-top: 10px;
+ }
