added logic to check if user wishes to persist authorization token when working with custom queries, updated error component UI to better handle padding, better error logic checks, cleanup issues with default text appearing when an error occurs

--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -14,7 +14,7 @@
   ~ // limitations under the License.
   -->
   
-<div class="row" *ngIf="errorObject['flag']">
+<div class="row row-padding" *ngIf="errorObject['flag']">
   <div id="failmsg" class="alert col-12" 
   [ngClass]="{
     'alert-danger': errorObject.severity === 'error',
