updated styling of card borders for better visibility, updated checkbox styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
 
     <div *ngIf="returnCurrentViewSelection() === 'home'">
       <h2>Your Tokens</h2>
-      <div class="card border-dark">
+      <div class="card">
         <span id="expiryHeader">
           Expires on: {{tokenObjectForDisplay['expirationDate']}}
         </span>
