--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,10 +23,10 @@
     (click)="toggleClass(navLinks[2])">{{navLinks[2]['name']}}</a>
   <a class="nav-link" (click)="toggleLightTheme()">
     <ng-container *ngIf="currentTheme === 'dark'">
-      <i class="lni lni-night"></i>
+      <fa-icon [icon]="faMoon" class="icon-adjust-no-padding"></fa-icon>
     </ng-container>
     <ng-container *ngIf="currentTheme === 'light'">
-      <i class="lni lni-sun"></i>
+      <fa-icon [icon]="faSun" class="icon-adjust-no-padding"></fa-icon>
     </ng-container>
   </a>
 </nav>
