--- a/src/app/components/fhirdata/fhirdata.component.html
+++ b/src/app/components/fhirdata/fhirdata.component.html
@@ -23,15 +23,21 @@
   <label for="query">Query:</label>
   <input type="text" id="query" name="query" formControlName="query" class="form-control">
 
-  <div class="top-adjust">
-    <!-- <button class="btn"><fa-icon [icon]="faCog" class="icon-adjust-no-padding"></fa-icon></button> -->
-    <label for="persistAuthorizationHeader" class="form-check-label side-adjust">Automatically add Bearer Token in Custom API call</label>
-    <input type="checkbox" formControlName="persistAuthorizationHeader" id="persistAuthorizationHeader" (change)="persistHeaderSelectionInLocalStorage($event)" class="form-check-input checkbox-adjust" />
+  <div class="top-adjust form-check form-switch">
+      <div class="col">
+        <label for="persistAuthorizationHeader" class="form-check-label side-adjust">Automatically add Bearer Token in Custom API call</label>
+        <input type="checkbox" formControlName="persistAuthorizationHeader" role="switch" id="persistAuthorizationHeader" (change)="persistCurrentHeadersInLocalStorage($event, 'auth')" class="form-check-input" />
+      </div>
+      
+      <div class="col">
+        <label for="persistHeaders" class="form-check-label side-adjust">Store current headers in local storage</label>
+        <input type="checkbox" formControlName="persistHeaders" role="switch" id="persistHeaders" (change)="persistCurrentHeadersInLocalStorage($event, 'everything')" class="form-check-input" />
+      </div>
   </div>
 
   <div class="top-adjust" formArrayName="queryHeaders">
     Headers
-    <button type="button" (click)="addHeader()" class="btn"><fa-icon [icon]="faPlusSquare" class="icon-adjust-no-padding"></fa-icon></button>
+    <button type="button" (click)="addHeader()" class="btn icon-background"><fa-icon [icon]="faPlusCircle" class="add-header-icon"></fa-icon></button>
     
     <div *ngFor="let alias of queryHeaders().controls; let i=index" [formGroupName]="i" class="row top-adjust">
       <div class="col">
@@ -45,7 +51,7 @@
       </div>
 
       <div class="col-1 top-adjust">
-        <button (click)="removeHeader(i)" class="btn btn-danger btn-adjust"><fa-icon [icon]="faTimesCircle" class="icon-adjust-no-padding"></fa-icon></button>
+        <button type="button" (click)="removeHeader(i)" class="btn icon-background btn-adjust"><fa-icon [icon]="faMinusCircle" class="delete-icon"></fa-icon></button>
       </div>
     </div>
   </div>
