--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,19 @@
+<!--
+  ~ // Copyright 2021 Omar Hoblos
+  ~ //
+  ~ // Licensed under the Apache License, Version 2.0 (the "License");
+  ~ // you may not use this file except in compliance with the License.
+  ~ // You may obtain a copy of the License at
+  ~ //
+  ~ //     http://www.apache.org/licenses/LICENSE-2.0
+  ~ //
+  ~ // Unless required by applicable law or agreed to in writing, software
+  ~ // distributed under the License is distributed on an "AS IS" BASIS,
+  ~ // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ // See the License for the specific language governing permissions and
+  ~ // limitations under the License.
+  -->
+  
 <div class="footer mt-auto format-footer-text">
   Made with <fa-icon [icon]="faHeart" class="icon-adjust-no-padding"></fa-icon> by Omar Hoblos
   <a href="https://github.com/omarhoblos" target="_blank" rel="noopener noreferrer" alt="GitHub Profile Omar Hoblos"><fa-icon [icon]="faGithubAlt" class="icon-adjust"></fa-icon></a>
