updated readme, changlog, added clearer text for storing headers in fhirdata component

--- a/src/app/components/fhirdata/fhirdata.component.html
+++ b/src/app/components/fhirdata/fhirdata.component.html
@@ -30,7 +30,7 @@
       </div>
       
       <div class="col">
-        <label for="persistHeaders" class="form-check-label side-adjust">Store current headers in local storage</label>
+        <label for="persistHeaders" class="form-check-label side-adjust">Store current headers in local storage (note - these persists even if you logout of Swiss)</label>
         <input type="checkbox" formControlName="persistHeaders" role="switch" id="persistHeaders" (change)="persistCurrentHeadersInLocalStorage($event, 'everything')" class="form-check-input" />
       </div>
   </div>
