complete refactor of OIDC Library, added new logging details, code cleanup for unused functions, removed unused UI elements, added countdown variable to inform user of minutes left for token validity, added new tsconfig path aliases, version bump to 2.0.0

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,28 @@
-<ng-container *ngIf="returnTokenStatus()">
+<!--
+  ~ // Copyright 2021 Omar Hoblos
+  ~ //
+  ~ // Licensed under the Apache License, Version 2.0 (the "License");
+  ~ // you may not use this file except in compliance with the License.
+  ~ // You may obtain a copy of the License at
+  ~ //
+  ~ //     http://www.apache.org/licenses/LICENSE-2.0
+  ~ //
+  ~ // Unless required by applicable law or agreed to in writing, software
+  ~ // distributed under the License is distributed on an "AS IS" BASIS,
+  ~ // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ // See the License for the specific language governing permissions and
+  ~ // limitations under the License.
+  -->
 
+  <ng-container *ngIf="returnTokenStatus()">
     <div>
       <h2>Your Tokens</h2>
       <div class="card">
-        <span id="expiryHeader">
-          Expires on: {{tokenObjectForDisplay['expirationDate']}}
-        </span>
+        <ng-container *ngIf="expirationMinutes">
+          <span id="expiryHeader">
+            Expires in {{expirationMinutes}} minutes, on {{tokenObjectForDisplay['expirationDateForDisplay']}}
+          </span>
+        </ng-container>
         <div class="accordion accordion-flush" id="accordionSection">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
