added json view functionality and bumped up swiss on fhir version

--- a/src/app/components/fhirdata/fhirdata.component.css
+++ b/src/app/components/fhirdata/fhirdata.component.css
@@ -15,14 +15,18 @@
  */
 
 
- .btn-adjust {
-    margin-top: 11px;
- }
+.btn-adjust {
+   margin-top: 11px;
+}
 
- .top-adjust {
-    padding-top: 10px;
- }
+.top-adjust {
+   padding-top: 10px;
+}
 
- .side-adjust {
+.side-adjust {
    padding-right: 5px;
- }
+}
+
+::ng-deep .segment-key {
+   color: #996600 !important;
+}
