updated search button styling

--- a/src/app/components/fhirdata/fhirdata.component.html
+++ b/src/app/components/fhirdata/fhirdata.component.html
@@ -69,13 +69,13 @@
 
 </form>
 
-<div class="row justify-content-center row-padding">
+<div class="row  justify-content-center row-cols-2  row-padding">
 
-  <div class="col ">
+  <div class="col-md-2 col-sm-12">
     <button type="button" class="btn btn-primary header-button" (click)="fetchPatientDataInSession()">Search with
       a pre-defined query</button>
   </div>
-  <div class="col ">
+  <div class="col-md-2 col-sm-12">
     <button type="button" class="btn btn-primary header-button" (click)="fetchPatientDataInSession('everything')">Search
       with $everything</button>
   </div>
